--- a/Volunteer/volunteer.html
+++ b/Volunteer/volunteer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Volunteer</title>
     <href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"></href>
     <link rel= "stylesheet" type="text/css" href="css/volunteer.css">
 </head>
@@ -66,9 +66,9 @@
       <button type="button">Get Involved</button>
     </a>
 </figure>   
-
-
-
 </main>  
 </body>
+<footer class="footer">
+  
+</footer>
 </html>
